syntax = "proto3";

package article.v1alpha;

import "article/v1alpha/message.proto";

message AddCommentRequest {
  string article_id = 1;
  string content = 2;
}

message AddCommentResponse {
  Comment comment = 1;
}

message RemoveCommentRequest {
  string id = 1;
}

message RemoveCommentResponse {
  ArticleWithComments article = 1;
}

message ListArticlesRequest {
  // The maximum number of items to return.
  int32 page_size = 2;

  // The next_page_token value returned from a previous List request, if any.
  string page_token = 3;
}

message ListArticlesResponse {
  // The field name should match the noun "Article" in the method name.
  // There will be a maximum number of items returned based on the page_size field in the request.
  repeated Article articles = 1;

  // Token to retrieve the next page of results, or empty if there are no more results in the list.
  string next_page_token = 2;
}

message GetArticleRequest {
  string id = 1;
}

message GetArticleResponse {
  ArticleWithComments article = 1;
}

message CreateArticleRequest {
  string title = 1;
  string content = 2;
}

message CreateArticleResponse {
  Article article  = 1;
}

message UpdateArticleRequest {
  string title = 1;
  string content = 2;
}

message UpdateArticleResponse {
  Article article  = 1;
}

message DeleteArticleRequest {
  string id = 1;
}

message DeleteArticleResponse {
  Article article  = 1;
}